# WebChat

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.html  login.html
